--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#navbarNav">
-          <img src="img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+          <img src="public/img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
 
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <img src="img/cantina1.jfif" alt="">
+          <img src="public/img/cantina1.jfif" alt="">
         </div>
       </div>
     </div>
@@ -66,21 +66,21 @@
       <div class="row text-center">
         <h3>Vantagens</h3>
         <div class="col-lg-4">
-          <img src="img/cantina2.jfif" alt="">
+          <img src="public/img/cantina2.jfif" alt="">
           <h5>Organização</h5>
           <p>
             Fica muito mais facil pegar o lanche
           </p>
         </div>
         <div class="col-lg-4">
-          <img src="img/cantina3.jfif" alt="">
+          <img src="public/img/cantina3.jfif" alt="">
           <h5>Controle</h5>
           <p>
             Tem alergia a alguma comida? Sem problema, nos bloqueamos
           </p>
         </div>
         <div class="col-lg-4">
-          <img src="img/cantina4.jfif" alt="">
+          <img src="public/img/cantina4.jfif" alt="">
           <h5>Antecipe</h5>
           <p>Compre antes da hora do recreio e seja feliz</p>
         </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="col-lg-6">
           <h5>Escola Colorir a Vida</h5>
-          <img src="img/escola2.jfif" alt="">
+          <img src="public/img/escola2.jfif" alt="">
           <p>
             <a href="login.html"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
           </p>
