--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="public/css/index.css">
   <!-- CSS do Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <!-- ================================================================================================================= -->
@@ -91,7 +91,7 @@
         <h3>Sua escola</h3>
         <div class="col-lg-6">
           <h5>Escola do Bomfim</h5>
-          <img src="img/escola1.jfif" alt="">
+          <img src="public/img/escola1.jfif" alt="">
           <p>
             <a href="login.html"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
           </p>
@@ -101,25 +101,6 @@
           <img src="public/img/escola2.jfif" alt="">
           <p>
             <a href="login.html"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="container espaco" id="equipe">
-      <div class="row text-center">
-        <h3>Equipe</h3>
-        <div>
-
-        </div>
-        <div class="col-lg-3" style="margin-top: 50px;">
-          <p>
-            Nome: Lucas Vinicius Costa Lima
-          </p>
-          <p>
-            Matricula: 144172004
-          </p>
-          <p>
-            Email: lucasvinilima15@gmail.com
           </p>
         </div>
       </div>
