--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="public/css/login.css">
     <title>Login</title>
 </head>
 
@@ -15,7 +15,7 @@
     <header>     
         <ul class="nav justify-content-center">
             <div>                
-                <img src="img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+                <img src="public/img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
         </ul>  
             
     </header>
